src/App.css
@font-face {
  font-family: codeFont;
  src: url(./codeFont.ttf);
}

canvas {display: block;}


body {background: #000;}

::placeholder {
  color: #20C20E;
}

input:focus{
  outline: none;
}

#container {
  width: 100%;
  height: 100%;
  position: relative;
}

#bg {
  width: 100%;
  height: 100%;
  position: relative;
  top: 0;
  left: 0;
}


.loginButton {
  background-color: black;
  color: #20C20E;
  border-color: #20C20E;
  border-radius: 8px;
  border-width: medium;
  display: block;
  margin: auto;
  padding: 10px;
  width: 300px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
}

* { 
  font-family: 'codeFont';
  color: #20C20E;
}

.pageBody {
  margin-top: 100px;
  padding: 0.2rem calc((100vw - 1000px) / 3);
}

.lessonTabs {
  margin-top: 40px;
  border: 4px solid #20C20E;
  border-radius: 8px;
  padding-left: 15px;
  padding-right: 15px;
  margin-left: 50px;
  margin-right: 50px;
}

.aboutUs {
  text-align: center;
  padding-left: 20%;
  padding-right: 20%;
}

.calendar {
  text-align: center;
}

.calendarRow {
  border: 1px solid #20C20E;
  display: inline-block;
  padding: 15px;
}

.calendarCell {
  min-width: 100px;
  min-height: 120px;
  /* max-width: 200px; */
  /* max-width: 200px; */
  display: inline-block;
}


.emptyCalendarCell {
  min-width: 100px;
  min-height: 120px;
  /* max-width: 200px; */
  /* max-width: 200px; */
  /* display: inline-block; */
  color: black;
}

.defaultCalendarCell {
  min-width: 100px;
  min-height: 120px;
  /* max-width: 200px; */
  /* max-width: 200px; */
  /* display: inline-block; */
  color: black;
}

